# groubiks

./: .gitignore  README.md  TODO.md  cube.py
include/: cube.h
include/groubiks/: Application.h  compile_config.h  config.h  cube.h  cube.hpp  graphics.h  groubiks.hpp  gui.hpp  log.h
include/groubiks/graphics/: graphics.h
include/groubiks/renderer/: ActiveDevice.h  Commands.h  Devices.h  Extensions.h  GraphicsPipeline.h  RenderContext.h  SwapChain.h  View.h  VulkanContext.h  vulkan_context.h  vulkan_device_context.h  vulkan_extras.h  vulkan_fill_structs.h  vulkan_graphics_pipeline.h  vulkan_render_context.h  vulkan_swapchain.h
include/groubiks/utility/: common.h  dynarray.h  log.h  macros.h  optional.h  string.h  vector.h
include/utility/: vector.h
src/: Application.c  CMakeLists.txt  graphics.c  groubiks.cpp  log.c  main.c  main.cpp
src/renderer/: ActiveDevice.c  CMakeLists.txt  Commands.c  Devices.c  Extensions.c  GraphicsPipeline.c  RenderContext.c  SwapChain.c  VulkanContext.c  vulkan_context.c  vulkan_device_context.c  vulkan_extras.c  vulkan_fill_structs.c  vulkan_swapchain.c
src/shaders/: compile_shaders_linux.sh  default.vert
src/utility/: CMakeLists.txt  common.c  dynarray.c  log.c  main.c  optional.c  string.c  vector.c
